--- a/escom-bpm-web/src/main/webapp/view/users/user-сard.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-сard.xhtml
@@ -10,7 +10,7 @@
     <ui:define name="page_body">
         <p:tab id="cardTab" title="#{bundle.Explorer}">  
             <p:panelGrid columns="2" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
-                         columnClasses="ui-grid-col-6 col-padding" >
+                         columnClasses="ui-grid-col-12 col-padding, ui-grid-col-12 col-padding" >
                 <p:panelGrid columns="1" layout="grid" styleClass="ui-panelgrid-blank ui-grid-col-12"
                              columnClasses="ui-grid-col-12 col-padding" >
 
